--- a/style.css
+++ b/style.css
@@ -87,13 +87,13 @@ section {
 }
 
 .bg1 {
-    background-image: url(img/taj2.png );
+    background-image: url(taj2.png );
 }
 
 .bg2 {
-    background-image: url(img/fort.jpg);
+    background-image: url(fort.jpg);
 }
 
 .bg3 {
-    background-image: url(img/monument.jpg);
+    background-image: url(monument.jpg);
 }
